# kainex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile  package.json  pnpm-lock.yaml
services/agent/: .env.example  pyproject.toml
services/agent/src/agent/: __init__.py  __main__.py  cli.py  config.py  executor.py  feedback.py  llm.py  main.py  market_analyzer.py  prompt_builder.py  strategy_journal.py
services/agent/src/agent/sentiment/: __init__.py  analyzer.py  news_fetcher.py
services/agent/tests/: test_cli.py  test_decision_parsing.py  test_market_analyzer.py  test_news_fetcher.py  test_prompt_builder.py  test_sentiment_analyzer.py  test_sentiment_integration.py  test_strategy_journal.py
services/collector/: pyproject.toml
services/collector/scripts/: seed_data.py
services/collector/src/collector/: __init__.py  config.py  main.py
services/collector/src/collector/jobs/: __init__.py  eod.py  intraday.py  onchain.py
services/collector/src/collector/models/: __init__.py  bar.py  onchain.py  tick.py
services/collector/src/collector/sources/: __init__.py  astock.py  baostock_source.py  base.py  crypto.py  finnhub_source.py  funding_rate.py  us_stock.py
services/collector/src/collector/storage/: __init__.py  duckdb_writer.py
services/collector/tests/: test_models.py  test_onchain.py  test_sources.py  test_storage.py
services/engine/: pyproject.toml
services/engine/scripts/: train_example_model.py
services/engine/src/engine/: __init__.py  scheduler.py
services/engine/src/engine/api/: deps.py  main.py
services/engine/src/engine/core/: __init__.py  adaptive_engine.py  attribution.py  backtest.py  optimizer.py  regime_detector.py  runner.py  strategy_selector.py  walk_forward.py
services/engine/src/engine/indicators/: __init__.py  ml_predictor.py  technical.py
services/engine/src/engine/ml/: feature_store.py  model_registry.py
services/engine/src/engine/paper_trading/: __init__.py  broker.py  commission.py  slippage.py
services/engine/src/engine/portfolio/: __init__.py  ledger.py  performance.py  tracker.py
services/engine/src/engine/risk/: drawdown.py  manager.py  position.py
services/engine/src/engine/strategies/: base.py  (+2 more)
services/engine/tests/: test_api.py  test_attribution.py  test_engine.py  test_integration.py  test_onchain_api.py  test_regime.py  test_walk_forward.py
(+115 files in other folders)
