[project]
name = "engine"
version = "0.1.0"
description = "Kainex Strategy Engine - backtesting, paper trading & portfolio management"
readme = "README.md"
authors = [
    { name = "francismiko", email = "1485059943@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "nautilus_trader",
    "pandas-ta",
    "duckdb",
    "pyarrow",
    "croniter",
    "finnhub-python",
    "pydantic",
    "pydantic-settings",
    "numpy",
    "pandas",
    "aiosqlite>=0.22.1",
]

[project.scripts]
engine = "engine.api.main:run"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
